🛠 fix: Adjust spacing

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -233,7 +233,7 @@ A4 PRINTED
 
       div:nth-last-child(1) {
         text-align: right;
-        flex: 0 0 40%;
+        flex: 0 0 30%;
       }
     }
 
@@ -265,7 +265,7 @@ PHONE
 
     div:nth-last-child(1) {
       text-align: right;
-      flex: 0 0 40%;
+      flex: 0 0 30%;
     }
   }
 
